# soongpt-backend

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  SECURITY_AUDIT.md  build.gradle.kts  docker-compose.deploy.yml  docker-compose.local.yml  docker-compose.yml  lab.md  result.md  settings.gradle.kts
.github/: pull_request_template.md
.github/workflows/: backend-test.yml  cd-dev.yml  ci.yml  claude-comment.yml  claude-issue-comment.yml  claude-issue.yml  claude-pr-comment.yml  claude-pr.yml  claude.yml  deploy-only.yml  dev-backup-bluegreen.yml  dev-backup.yml  dev-cd.yml  dev-ci.yml  dev-pr.yml  dev-push.yml  dev.yml  docker.yml  main-pr.yml  main-push.yml  prod-bluegreen.yml  prod-ci.yml  prod.yml
.sisyphus/plans/: course-parsing-refactor.md
Claude-Code-Usage-Monitor/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  RELEASE.md  TROUBLESHOOTING.md  VERSION_MANAGEMENT.md  pyproject.toml
Claude-Code-Usage-Monitor/.github/: FUNDING.yml
Claude-Code-Usage-Monitor/.github/workflows/: lint.yml  release.yml  test.yml  version-bump.yml
Claude-Code-Usage-Monitor/src/claude_monitor/: __init__.py  __main__.py  _version.py  error_handling.py
Claude-Code-Usage-Monitor/src/claude_monitor/cli/: __init__.py  bootstrap.py  main.py
Claude-Code-Usage-Monitor/src/claude_monitor/core/: __init__.py  calculations.py  data_processors.py  models.py  p90_calculator.py  plans.py  pricing.py  settings.py
Claude-Code-Usage-Monitor/src/claude_monitor/data/: __init__.py  aggregator.py  analysis.py  analyzer.py  reader.py
Claude-Code-Usage-Monitor/src/claude_monitor/monitoring/: __init__.py  data_manager.py  orchestrator.py  session_monitor.py
Claude-Code-Usage-Monitor/src/claude_monitor/terminal/: __init__.py  manager.py  themes.py
Claude-Code-Usage-Monitor/src/claude_monitor/ui/: __init__.py  components.py  display_controller.py  layouts.py  progress_bars.py  session_display.py  table_views.py
Claude-Code-Usage-Monitor/src/claude_monitor/utils/: __init__.py  formatting.py  model_utils.py  notifications.py  time_utils.py  timezone.py
Claude-Code-Usage-Monitor/src/tests/: __init__.py  conftest.py  run_tests.py  test_aggregator.py  test_analysis.py  test_calculations.py  test_cli_main.py  test_data_reader.py  test_display_controller.py  test_error_handling.py  test_formatting.py  test_monitoring_orchestrator.py  test_pricing.py  test_session_analyzer.py  test_settings.py  test_table_views.py  test_time_utils.py  test_timezone.py  test_version.py
Claude-Code-Usage-Monitor/src/tests/examples/: api_examples.py
admin/: README.md  package-lock.json  package.json  vite.config.ts
admin/src/: App.css  App.tsx
admin/src/api/: courseApi.ts
admin/src/components/: CourseList.css  CourseList.tsx  FilterTab.tsx  PasswordModal.css  PasswordModal.tsx
admin/src/data/: departments.ts  teachingDepartments.ts
admin/src/types/: course.ts
docs/: issue-was-rusaint-connection.md  usaint-testing.md
examples/: deploy.env.example  local.env.example
ops/github/: AWS_OIDC_SETUP.md  sync-env-vars.sh
ops/nginx/: enable-https-letsencrypt.sh  install-current-host.sh  install-prod.sh  soongpt.current-host.conf.template  soongpt.prod.conf.template
ops/security/: PT-133_ENV_SECRET_MANAGEMENT_POLICY.md
rusaint_service/: .dockerignore  API_SPECIFICATION.md  Dockerfile  README.md  env.example  main.py  requirements-test.txt  requirements.txt
rusaint_service/app/: __init__.py  main.py
rusaint_service/app/api/: __init__.py  routes.py  timetable.py  usaint_router.py
rusaint_service/app/core/: __init__.py  config.py  security.py
rusaint_service/app/schemas/: __init__.py  graduation_summary.py  timetable.py  usaint_schemas.py
rusaint_service/app/services/: __init__.py  constants.py  exceptions.py  fetchers.py  filtering.py  graduation_summary_builder.py  rusaint_academic_service.py  rusaint_client.py  rusaint_graduation_service.py  rusaint_service.py  session.py  u_saint_auth.py
rusaint_service/docs/: graduation_summary_cases.md
rusaint_service/tests/: conftest.py  test_config.py  test_fetchers.py  test_graduation_summary_builder.py  test_rusaint_service.py  test_security.py
script/: add_grades_to_departments.py  log_handlers.py  observer.py  requirements.txt  soongpt_handler.py
script/25-2/: add_grades_to_departments.py  append_sample_notification_log.py  docker-deploy.sh  log_handlers.py  observer.py  requirements.txt  run.sh  soongpt_handler.py
script/25-2/course/: CourseEntity.java  TargetEntity.java  course_parser.py  course_pipeline.py  generate_custom_target_map.py  target_classifier.py
script/26-1/: README.md  data.yml  department_test_checklist.md  docker-deploy.sh  flashcard_review.html  merge_courses.py  parsed_unique_targets.json  soongpt_soongpt_dev_dump_20260210_151434.sql  ssu26-1.csv  unmapped_targets.json
script/26-1/course/: ssu26-1.csv
script/26-1/crawler/: compare_targets_downloads_vs_api_by_category.py  compare_targets_ecc_downloads_vs_api.py  scrape_ssu_ecc.py
script/26-1/docs/: PT115_CHANGE_REPORT.md  university_scope_major_courses_report_2026-02-12.md
script/26-1/downloads/: AI대학_AI소프트웨어학부.xls  AI대학_정보보호학과(계약학과).xls  IT대학_AI융합학부.xls  IT대학_글로벌미디어학부.xls  IT대학_디지털미디어학과.xls  IT대학_소프트웨어학부.xls  IT대학_전자정보공학부 IT융합전공.xls  IT대학_전자정보공학부 전자공학전공.xls  IT대학_컴퓨터학부.xls  경영대학_경영학부.xls  경영대학_금융학부.xls  경영대학_벤처경영학과(계약학과).xls  경영대학_벤처중소기업학과.xls  법과대학_법학과.xls  (+40 more)
script/course/: CourseEntity.java  analyze_classification.py  check_validation.py  classification_problems_summary.py  course_grouper.py  course_parser.py  course_pipeline.py  detailed_analysis.py  generate_course_sql.py  generate_custom_target_map.py  generate_target_sql.py  generate_target_sql_from_map.py  target_classifier.py  target_validator.py
(+1158 files in other folders)
